#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("LC_307") {
  sources = [ 
      "LC_307_demo.c",
      "LC_307.c"
  ]

  include_dirs = [
    "//device/hisilicon/hispark_pegasus/sdk_liteos/include",
    "//base/iot_hardware/peripheral/interfaces/kits",
    "//utils/native/lite/include",
    "//device/hisilicon/hispark_pegasus/hi3861_adapter/kal/cmsis",
    "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals",
    "//applications/sample/wifi-iot/app/LC-302-3C_demo"
  ]

  deps = [ "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals:bearpi_iot_hardware_hals" ]
}
